--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
   "devDependencies": {
     "@babel/core": "^7.21.4",
     "@babel/preset-react": "^7.18.6",
+    "@types/marked": "^4.0.8",
     "@types/webpack-env": "^1.18.0",
-    "frontmatter-markdown-loader": "^3.7.0"
+    "frontmatter-markdown-loader": "^3.7.0",
+    "marked": "^4.3.0"
   }
 }
