--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "@types/node": "18.15.11",
     "@types/react": "18.0.33",
     "@types/react-dom": "18.0.11",
+    "date-fns": "^2.29.3",
     "eslint": "8.37.0",
     "eslint-config-next": "13.3.0",
     "gray-matter": "^4.0.3",
+    "highlight.js": "^11.7.0",
     "next": "13.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
