--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "next": "13.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-highlight": "^0.15.0",
+    "react-markdown": "^8.0.7",
+    "react-medium-image-zoom": "^5.1.4",
     "sass": "^1.61.0",
     "typescript": "5.0.4"
   },
@@ -34,8 +37,8 @@
     "@babel/core": "^7.21.4",
     "@babel/preset-react": "^7.18.6",
     "@types/marked": "^4.0.8",
+    "@types/react-highlight": "^0.12.5",
     "@types/webpack-env": "^1.18.0",
-    "frontmatter-markdown-loader": "^3.7.0",
-    "marked": "^4.3.0"
+    "frontmatter-markdown-loader": "^3.7.0"
   }
 }
